# Deep_Research_01

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  db.py  main.py  models.py  utils.py
backend/operators/: critic.py  experimenter.py  planner_agent.py  registry.py  repo_tools.py  researcher.py  reviser.py  synthesizer.py
backend/services/: artifacts.py  ast_analysis.py  compression.py  conflict_resolution.py  embeddings.py  execution.py  experiments.py  failure_analysis.py  llm.py  memory.py  patch_synthesizer.py  planner.py  project_state.py  repo_inspection.py  repo_parsers.py  repo_profiles.py  sandbox_harness.py  search.py  tasks.py  (+2 more)
configs/: operator_registry.yaml  planner_rules.yaml  system_config.yaml
data/: research_engine.db
docs/: duplicate_module_map.md  refactor_baseline.md  runtime_baseline.md
research_lab/: research_loop.py
scripts/: bootstrap_demo.py
tests/: test_agent_protocol.py  test_agent_router.py  test_belief_system.py  test_belief_timeline.py  test_canonical_modules.py  test_claim_pipeline.py  test_conflict_resolution.py  test_experiment_upgrade.py  test_feedback_engine.py  test_graph_store.py  test_lineage_merge.py  test_meta_controller.py  test_operator_evaluator.py  test_operator_registry.py  test_operator_selector.py  test_planner_pipeline.py  test_program_manager.py  test_research_engine.py  test_run_registry.py  test_runtime_migration_guards.py  test_runtime_unification.py  test_state_manager.py  test_temporal_belief_update.py  test_verified_executor.py  test_version_tracker.py
(+189 files in other folders)
